--- a/secondyear.html
+++ b/secondyear.html
@@ -15,34 +15,27 @@
     <div class="sem">
         <div class="sub-box" style="background-color: #d5e0fa;">
             <h2>MCS</h2>
-            <a href="https://drive.google.com/drive/folders/1ktyGRivyhMcPt35IYzx2_L1mSAa0lGAx?usp=share_link "
-                target="_blank"><button>Click me</button></a>
-
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #f1f1d8;">
             <h2>DS</h2>
-            <a href=" https://drive.google.com/drive/folders/1-HylHmwCXYyq6Qrct329-AUfVJS1Xr71" target="_blank"><button>Click me</button></a>
-
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #d5fadf;">
             <h2>DCN</h2>
-            <a href="https://drive.google.com/drive/folders/1_25DZPwpqqp3YjGlx8fbEEQpn7JFHBl8?usp=share_link"
-                target="_blank"><button>Click me</button></a>
+            <a href="Notes\2ndyear\DCN.zip" target="_blank"><button>Click me</button></a>
         </div>
 
         <div class="sub-box" style="background-color: #f8decf;">
             <h2>DSM</h2>
-            <a href="https://drive.google.com/drive/folders/1Su2uGE_ZsOHKYhvcVxyi1iMdKibt5zsv"
-                target="_blank"><button>Click me</button></a>
-
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #f8d9ee;">
             <h2>TOC</h2>
-            <a href="https://drive.google.com/drive/folders/1pJnGgl3e3GzltZs31STTQPLPjaSpUvsr?usp=share_link  " target="_blank"><button>Click me</button></a>
-
+            <button>Click me</button>
         </div>
     </div>
     <h1 class="teachers-title">Teachers</h1>
@@ -106,32 +99,27 @@
         <div class="sem">
             <div class="sub-box" style="background-color: #ffd7d7">
                 <h2>COD</h2>
-                <a href=" https://drive.google.com/drive/folders/18FWPwZMTULlrikqtAgGEpkVNKmSXKsoG?usp=share_link  "
-                target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color: #d8edf1">
                 <h2>AMM</h2>
-                <a href="  https://drive.google.com/drive/folders/1uG6c4-2BXwN40YK_jKRbBO7EA22UZdvm?usp=share_link "
-                target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color:#e3d5fa">
                 <h2>ACN</h2>
-                <a href=" https://drive.google.com/drive/folders/1ODTV1VagxXOu6rGE0lDOFqYZpn7m_65Z?usp=share_link  "
-                target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color: #f6f8cf">
                 <h2>CA</h2>
-                <a href="  https://drive.google.com/drive/folders/1sD2PWEZmrCy6eyMU3EY5CStKjppKCWCf?usp=share_link "
-                target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color: #f8d9ee;">
                 <h2>SE</h2>
-                <a href="https://drive.google.com/drive/folders/1ic7bAIqy8r9wu1GHuYF1FZmkfzqs8vsY?usp=share_link  "
-                target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
         </div>
         <h1 class="teachers-title" style="color: black;">Teachers</h1>
@@ -285,7 +273,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2023 NotesHub. All rights reserved.</p>
+          <p>&copy; 2023 NotesHub. All rights reserved.</p>
         </div>
     </footer>
 </body>
