--- a/thirdyear.html
+++ b/thirdyear.html
@@ -15,32 +15,27 @@
     <div class="sem">
         <div class="sub-box" style="background-color: #d5e0fa;">
             <h2>OS</h2>
-            <a href="https://drive.google.com/drive/folders/159hMfMIBOSozTUs9qhf47Og0zBZkgaQh?usp=share_link  "
-                target="_blank"><button>Click me</button></a>
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #f1f1d8;">
             <h2>DBE</h2>
-            <a href=" https://drive.google.com/drive/folders/1cGSuhQLJ63Un0JVYqj1NeGfPDn2lomaW?usp=share_link "
-                target="_blank"><button>Click me</button></a>
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #d5fadf;">
             <h2>ML</h2>
-            <a href="https://drive.google.com/drive/folders/1mGVPg7YrFbCJQFMRCURvxKKaKwzH_Sd_?usp=share_link  "
-                target="_blank"><button>Click me</button></a>
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #f8decf;">
             <h2>CNS</h2>
-            <a href="  https://drive.google.com/drive/folders/1vPePRdYkT9vaDyWOQrlt_ChRgjmXidby?usp=share_link "
-                target="_blank"><button>Click me</button></a>
+            <button>Click me</button>
         </div>
 
         <div class="sub-box" style="background-color: #f8d9ee;">
             <h2>SP</h2>
-            <a href="https://drive.google.com/drive/folders/1YGuej7R94iONYnmPfWOdwDeO4E3y2npZ?usp=share_link  "
-                target="_blank"><button>Click me</button></a>
+            <button>Click me</button>
         </div>
     </div>
     <h1 class="teachers-title">Teachers</h1>
@@ -110,45 +105,39 @@
         <div class="sem">
             <div class="sub-box" style="background-color: #ffd7d7">
                 <h2>UI</h2>
-                <a href=" https://drive.google.com/drive/folders/1ZTPzV2fU9LlwYyEvB7-t5pFj67hTkf5w?usp=share_link "
-                    target="_blank"><button>Click me</button></a>
-
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color: #d8edf1">
                 <h2>CC</h2>
-                <a href="  https://drive.google.com/drive/folders/1--h37Yw03va4TvvtBoQTD8UbZyKJz8IE?usp=share_link "
-                    target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color:#e3d5fa">
                 <h2>DS</h2>
-                <a href=" https://drive.google.com/drive/folders/1s9m7CWSci3BzYGeDTT1heV6odU6jQs8k?usp=share_link  "
-                    target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color: #f6f8cf">
-                <h2>ADS</h2>
-                <a href=" https://drive.google.com/drive/folders/1JXDZEZrnS2_U0tfnxQdHOzWzmvh34oZm?usp=share_link "
-                    target="_blank"><button>Click me</button></a>
+                <h2>DBE</h2>
+                <button>Click me</button>
             </div>
 
             <div class="sub-box" style="background-color: #f8d9ee;">
                 <h2>Merchandising</h2>
-                <a href=" https://drive.google.com/drive/folders/1r1ZsyXUGLNUMWyVamUdDGIOSd-uNFP_b?usp=share_link  "
-                    target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
             <div class="sub-box" style="background-color: #f1f1f1">
                 <h2>Technical Textile</h2>
-                <a href=" " target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
             <div class="sub-box" style="background-color: #f8e8d9">
                 <h2>IOT</h2>
-                <a href=" " target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
             <div class="sub-box" style="background-color: #d9f6f8">
                 <h2>Mechatronics</h2>
-                <a href=" " target="_blank"><button>Click me</button></a>
+                <button>Click me</button>
             </div>
         </div>
         <h1 class="teachers-title" style="color: black;">Teachers</h1>
@@ -304,7 +293,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2023 NotesHub. All rights reserved.</p>
+          <p>&copy; 2023 NotesHub. All rights reserved.</p>
         </div>
     </footer>
 </body>
